[package]
name = "raug-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.9"
iced_audio = "0.12"
iced_native = "0.10"
crossbeam-channel = { version = "0.5", features = [] }
itertools = "0.13"
derive_more = { version = "1", features = ["display"] }
thiserror = "1.0"

[dependencies.raug]
git = "https://github.com/clstatham/raug"

[dev-dependencies]
env_logger = "0.11"
