[package]
name = "raug-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.9"
iced_audio = "0.12"
iced_native = "0.10"
crossbeam-channel = { version = "0.5", features = [] }
itertools = "0.13"
derive_more = { version = "1", features = ["display"] }
thiserror = "1.0"
raug = { path = "../raug" }
raug-ext = { path = "../raug-ext" }


[dev-dependencies]
env_logger = "0.11"
